Fix responsive layout bug

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -26,7 +26,7 @@
     
 }
 
-@media screen and (min-width: 668px) {
+@media screen and (min-width: 676px) {
   
   /*  HEADER*/
   nav {
@@ -35,14 +35,14 @@
     font-size: 1.125em;
     margin-right: 5%;
     text-align: right;
-    width: 45%;
+    width: 55%;
   }
   
   #logo {
     float: left;
     margin-left: 5%;
     text-align: left;
-    width: 45%;
+    width: 35%;
   }
   
   h1 {
